@@ -13,6 +13,7 @@ S3method(plot,classify)
 S3method(plot,frequent_terms)
 S3method(plot,hierarchical_coverage_regex)
 S3method(plot,hierarchical_coverage_term)
+S3method(plot,important_terms)
 S3method(plot,ngram_collocations)
 S3method(plot,tag_co_occurrence)
 S3method(plot,term_count)
