@@ -27,7 +27,11 @@ NEW FEATURES
 
 * `get_text` added to extract the original text associated with particular tags.
 
+
 MINOR FEATURES
+
+* `important_terms` picks up a plot method corresponding to the `frequent_terms`
+  plot method.
 
 IMPROVEMENTS
 
